--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.1"
 description = "A Wasm Engine 3d. Test project"
 repository = "https://github.com/Interface0625/we3d.git"
 authors = ["Interface0625 <karolis.lukosius@gmail.com>"]
+include = ["src/**/*", "Cargo.toml"]
 license = "MIT"
 edition = "2018"
 
