--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,20 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-gltf = "*"
-serde= { version = "*", features = ["derive"] } 
-serde_json = "*"
-wasm-bindgen = { version = "*", features = ["serde-serialize"]  }
-wasm-bindgen-futures = "*"
-futures = "*"
-nalgebra = "*"
-approx = "*"
-js-sys = "*"
-lazy_static = "*"
-console_error_panic_hook = "*"
+gltf = "0.15.2"
+serde= { version = "1.0.112", features = ["derive"] } 
+serde_json = "1.0.55"
+wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
+wasm-bindgen-futures = "0.4.13"
+futures = "0.3.5"
+nalgebra = "0.21.1"
+approx = "0.3.2"
+js-sys = "0.3.40"
+lazy_static = "1.4.0"
+console_error_panic_hook = "0.1.6"
 
 [dependencies.web-sys]
-version = "*"
+version = "0.3.40"
 features = [
     'Document',
     'Headers',
